manifests/base/media/transmission/deploy-transmission.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
  namespace: media
spec:
  selector:
    matchLabels:
      app: transmission
  replicas: 1
  template:
    metadata:
      labels:
        app: transmission
    spec:
      securityContext:
        runAsUser: 61003
        runAsGroup: 61003
      containers:
        - name: transmission
          image: transmission
          volumeMounts:
            - name: transmission-downloads
              mountPath: /downloads
            - name: transmission-config
              mountPath: /config
          ports:
            - containerPort: 9091
            - containerPort: 51413
              protocol: TCP
            - containerPort: 51413
              protocol: UDP
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
            limits:
              cpu: 300m
              memory: 600Mi
      volumes:
        - name: transmission-downloads
          persistentVolumeClaim:
            claimName: transmission-downloads
        - name: transmission-config
          persistentVolumeClaim:
            claimName: transmission-config
