manifests/base/media/transmission/ingressroutetcp-transmission-torrent.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: transmission-torrent
  namespace: media
spec:
  entryPoints:
    - torrent-tcp
  routes:
    - match: HostSNI(`*`)
      services:
        - name: transmission-torrent
          namespace: media
          port: 51413
          nativeLB: true
          tls: false
